[package]
name = "tailpam"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
envy = "0"
curl = "^0.4"
rand = "0"
serde = { version = "^1", features = [ "derive" ] }
serde_json = "^1"

[profile.release]
opt-level = "s"
lto = true
