[package]
name = "tailpam"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
serde = { version = "^1", features = [ "derive" ] }
serde_json = "^1"
thiserror = "1"
syslog = "5.0"

[dependencies.curl]
version = "^0.4"
default-features = false
